      complies with Debian rules
  * debian/control
    - Update dependencies of binary package to the versions of libav* that are
      currently available in "unstable"
    - Upgraded standards version
  * debian/menu
    - Using absolute path for menu icons
  * debian/patches/desktop.patch
    - Added "Keywords" entry to get rid of lintian warning
      desktop-entry-lacks-keywords-entry
  * Added opaque background to icons in png and xpm format for better
    visual clarity
  * debian/patches/ffmpeg-vs-libav-avframe-allocation.patch
    - Fix segfault due to AVFrame initialization differences between Libav
      (used in Debian) and FFmpeg (used by upstream developer)
  * debian/patches/ffmpeg-vs-libav-aspect-ratio.patch
    - Fix floating-point exception due to unset sample aspect ratio of
      AVStream (has to be the same as the one of the codec in Libav,
      upstream uses FFmpeg)

 -- Martin Steghöfer <martin@steghoefer.eu>  Sat, 10 May 2014 13:52:19 +0200

karlyriceditor (1.3-1) unstable; urgency=low

  * Initial release (Closes: #692968)
  * Added a man page (automatically created from sgml file), copyright
    specification and watch file
  * debian/patches/include-libavutil-mathematics.patch
    - Fix compilation error: Add missing includes for libavutil
  * debian/patches/install.patch
    - Add support for "install" target in Makefile
  * debian/patches/remove-openssl-dependency.patch
    - License incompatibilities: Get rid of linkage against OpenSSL
  * debian/patches/qprintable-crash.patch
    - Fix crash on Debian wheezy
  * Converted image src/images/application_icon.png into adequate formats
    for freedesktop.org and Debian Menu.
  * debian/patches/desktop.patch
    - Improve freedesktop.org configuration file
  * debian/patches/spelling.patch
    - Spelling error in the source code detected by lintian

 -- Martin Steghöfer <martin@steghoefer.eu>  Sun, 18 Nov 2012 00:12:51 +0100